# lgtm

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TODO.md  eslint.config.js  git_ops.py  package-lock.json  package.json  pyproject.toml  review.html  server.py  vite.config.ts
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude-plugin/agents/: walkthrough-author.md
agents/file-classifier/: AGENT.md
agents/synthesizer/: AGENT.md
commands/: lgtm.md
docs/: channels-research.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ProjectView.tsx  analysis.ts  api.ts  claude-comments.ts  comment-api.ts  comment-types.ts  comments.ts  commit-picker.ts  diff.ts  document.ts  file-list.ts  format-comments.ts  main.ts  main.tsx  persistence.ts  state.ts  style.css  tree.ts  ui.ts  utils.ts  walkthrough-api.ts  walkthrough-types.ts
hooks/: ensure-server.sh  hooks.json
server/: app.ts  comment-migration.test.ts  comment-migration.ts  comment-store.test.ts  comment-store.ts  comment-types.ts  git-ops.ts  mcp.ts  parse-analysis.ts  parse-walkthrough.ts  server.ts  session-manager.ts  session.ts  slugify.ts  store.ts  symbol-lookup.ts  tsconfig.json  walkthrough-types.ts
server/__tests__/: comment-migration.test.ts  comment-store.test.ts  diff-hash.test.ts  git-ops.test.ts  mcp.test.ts  parse-analysis.test.ts  parse-walkthrough.test.ts  routes-lsp.test.ts  routes.test.ts  session-manager.test.ts  session.test.ts  store.test.ts  (+1 more)
tests/: test_git_ops.py  test_session.py
(+120 files in other folders)
