[project]
name = "lgtm"
version = "0.1.0"
description = "Web-based review UI for collaborating with Claude Code on code changes and documents"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.scripts]
lgtm = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["frontend/dist/**"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ANN"]
ignore = [
    "ANN401",  # dynamically typed expressions (Any) are disallowed
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
